@@ -1,3 +1,7 @@
+2021-09-17 Danilo Chang
+
+	* Implement command: KNearest
+
 2021-09-16 Danilo Chang
 
 	* Improve HOGDescriptor command
